Xóa các api thừa ở products và fix lại filter cho products